codepkg/objects/MyPlace_Property__c.object
<CustomObject>
    <description>Public data imported from the Cuyahoga County FTP that is relevant to HHP. Imported into Salesforce to save HHP users from manually going into MyPlace. Data must be updated annually using a data load</description>
    <fields>
        <fullName>AGE__c</fullName>
        <description>Year the house was built</description>
        <inlineHelpText>Year the house was built</inlineHelpText>
        <label>Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>The first line of the address put together from its individual parts</description>
        <formula>STREET_NUMBER__c + &apos; &apos; +  IF(ISBLANK(STREET_DIR__c), &apos;&apos;,  STREET_DIR__c + &apos; &apos;) + STREET_NAME__c + &apos; &apos; + STREET_SUFFIX__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <description>Country of the MyPlace Property. Not always provided in MyPlace Data, but unless if something incredible happens, this will always be USA.</description>
        <inlineHelpText>Country of the MyPlace Property. Not always provided in MyPlace Data, but unless if something incredible happens, this will always be USA.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEEDED_OWNER__c</fullName>
        <description>The owner of the property according to the deed</description>
        <inlineHelpText>The owner of the property according to the deed</inlineHelpText>
        <label>Deeded Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCCUPANCY__c</fullName>
        <description>Residential occupancy from MyPlace</description>
        <inlineHelpText>Residential occupancy from MyPlace</inlineHelpText>
        <label>Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PARCEL_ID__c</fullName>
        <description>Parcel ID from MyPlace. Same as the parcel number / property number, but without dashes. Used as external ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Parcel ID from MyPlace used to update data</inlineHelpText>
        <label>MyPlace Parcel ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <description>State of the MyPlace Property. Not always provided in MyPlace Data, but unless if something incredible happens, this will always be Ohio</description>
        <inlineHelpText>State of the MyPlace Property. Not always provided in MyPlace Data, but unless if something incredible happens, this will always be Ohio.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_DIR__c</fullName>
        <description>Street direction, like the West in W 117th St</description>
        <inlineHelpText>Street direction, like the West in W 117th St</inlineHelpText>
        <label>Street Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NAME__c</fullName>
        <description>Street name without type of street or direction</description>
        <inlineHelpText>Street name without type of street or direction</inlineHelpText>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NUMBER__c</fullName>
        <description>Number of the address</description>
        <inlineHelpText>Number of the address</inlineHelpText>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_SUFFIX__c</fullName>
        <description>The actual type of street, like St, Ave, Ln, Rd, Ct, etc.</description>
        <inlineHelpText>The actual type of street, like St, Ave, Ln, Rd, Ct, etc.</inlineHelpText>
        <label>Street Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITS__c</fullName>
        <description>Number of units</description>
        <inlineHelpText>Often 0 if there the property is not split into units</inlineHelpText>
        <label>Number of Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNIT_NUM__c</fullName>
        <description>Unit number, if the property has one</description>
        <inlineHelpText>Properties will not always have a unit number</inlineHelpText>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DATE__c</fullName>
        <description>The date that the data from MyPlace was last updated by the county. Stored as text for ease of importing</description>
        <inlineHelpText>The date that the data from MyPlace was last updated by the county</inlineHelpText>
        <label>Parcel Data Last Updated Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MyPlace Property</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MyPlace Parcel Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyPlace Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>